@@ -1,6 +1,7 @@
 = Version History =
 x.x:
 
+- added: widget title links for blog widget
 - fixed: incorrect context in index_blog widget
 - fixed: blog widget more link in widget
 - fixed: deprecated notices in combination with widget_manager
